[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/water_texture.jpg" type="Texture" id=1]
[ext_resource path="res://scenes/world/puddle.gd" type="Script" id=2]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0666667, 0.72549, 0.964706, 0.705882 )
albedo_texture = ExtResource( 1 )
metallic = 0.47
metallic_specular = 0.36
metallic_texture = ExtResource( 1 )
roughness = 0.0
normal_enabled = true
normal_scale = 1.0

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.501223, 0.0398939, 0.471993 )

[node name="puddle" type="Spatial"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Area"]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0 )
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 3 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
